# Test_Graphics

./: .gitignore  CMakeLists.txt  Makefile  Test_Graphics.cbp  Test_Graphics.depend  Test_Graphics.layout  sprint_2_report.md  sprint_3_report.md
headers/: default_includes.h
headers/Error/: InitError.h
headers/GPUUtils/: imageloader.h
headers/GameClock/: GameClock.h
headers/Math/: Vector2.h
headers/Rendering/Elements/ElementManager/: ElementManager.h
headers/Rendering/Sprites/: sprite.h
headers/Rendering/Theater/: Theater.h
headers/Window/: BaseSDL.h
shaders/compiled/d3d12/: TexturedQuad.vert.dxil  textured.frag.cso  textured.frag.hlsl  textured.vert.cso  textured.vert.hlsl
shaders/compiled/vulkan/: textured.frag.spv  textured.vert.spv
shaders/raw/: textured.frag  textured.vert  textured.vert.hlsl
src/: main.cpp
src/Error/: InitError.cpp
src/GPUUtils/: imageloader.cpp
src/GameClock/: GameClock.cpp
src/Math/: Vector2.cpp
src/Rendering/Sprites/: sprite.cpp
src/Rendering/Theater/: Theater.cpp
src/Window/: BaseSDL.cpp
